--- a/th/index.html
+++ b/th/index.html
@@ -95,15 +95,24 @@
 
 
     <main class="container-fluid p-0 home">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner w-100 overflow-hidden d-flex justify-content-center home-img">
+        
+        <div id="carouselExampleSlidesOnly" class="carousel slide pc-only" data-ride="carousel">
+            <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100 pc-only" src="../images/Home Banner/AW-WEB-BannerH-11022022-PC.png" alt="">
-                    <img class="w-100 ph-only" src="../images/Home Banner/AW-WEB-BannerH-11022022-PH.png" alt="">
+                    <img class="w-100 d-block" src="../images/Home Banner/AW-WEB-BannerH-11022022-PC.png" alt="">
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100 pc-only" src="../images/Home Banner/AW-SMD-MRY-BannerWebWildBuffalo-25022021-PC.png" alt="">
-                    <img class="w-100 ph-only" src="../images/Home Banner/AW-SMD-MRY-BannerWebWildBuffalo-25022021-PH.png" alt="">
+                    <img class="w-100 d-block" src="../images/Home Banner/AW-SMD-MRY-BannerWebWildBuffalo-25022021-PC.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div id="carouselExampleSlidesOnly" class="carousel slide ph-only" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="w-100 d-block" src="../images/Home Banner/AW-WEB-BannerH-11022022-PH.png" alt="">
+                </div>
+                <div class="carousel-item">
+                    <img class="w-100 d-block" src="../images/Home Banner/AW-SMD-MRY-BannerWebWildBuffalo-25022021-PH.png" alt="">
                 </div>
             </div>
         </div>
