--- a/en/leaderboard.html
+++ b/en/leaderboard.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="modal-body d-flex flex-column align-items-center">
                     <a class="my-2" href="https://play.google.com/store/apps/details?id=com.starcube.Maruay99&shortlink=WebMR99Download&pid=Web-MR99-Download"><img class="img-fluid" src="../images/android.png" alt=""></a>
-                    <a class="my-2" href="https://storage.googleapis.com/maruay/apk/maruay99.apk"><img class="img-fluid" src="../images/apk_ios.png" alt=""></a>
+                    <a class="my-2" href="https://cdn.maruay99.com/"><img class="img-fluid" src="../images/apk_ios.png" alt=""></a>
                 </div>
             </div>
         </div>
