--- a/th/index.html
+++ b/th/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="modal-body bg-dark-red d-flex flex-column align-items-center">
                     <a class="my-2" href="https://play.google.com/store/apps/details?id=com.starcube.Maruay99&shortlink=WebMR99Download&pid=Web-MR99-Download"><img class="img-fluid" src="../images/android.png" alt=""></a>
-                    <a class="my-2" href="https://cdn.maruay99.com/"><img class="img-fluid" src="../images/apk_ios.png" alt=""></a>
+                    <a class="my-2" href="https://cdn.maruay99.com/apk/maruay99.apk"><img class="img-fluid" src="../images/apk_ios.png" alt=""></a>
                 </div>
             </div>
         </div>
@@ -122,7 +122,7 @@
         
         <div class="d-flex justify-content-around">
             <a href="https://play.google.com/store/apps/details?id=com.starcube.Maruay99&shortlink=WebMR99Download&pid=Web-MR99-Download"><img class="img-fluid p-2" src="../images/android.png" alt=""></a>
-            <a href="https://cdn.maruay99.com/"><img class="img-fluid p-2" src="../images/apk_ios.png" alt=""></a>
+            <a href="https://cdn.maruay99.com/apk/maruay99.apk"><img class="img-fluid p-2" src="../images/apk_ios.png" alt=""></a>
         </div>
 
         <section class="container-fluid p-0">
